<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#55cccccc" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/dialog_one"
        android:textColor="#000000" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"

        android:background="#55cccccc" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_two"
        android:padding="15dp"
        android:textColor="#000000" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#55cccccc" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_thrid"
        android:padding="15dp"
        android:textColor="#000000" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#55cccccc" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/dialog_four"
        android:textColor="#000000" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#55cccccc" />
</LinearLayout>