<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.google.lenono.sellsortbarcommon.SellButtonToActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/sell_button_activity_toolbar"
        android:layout_width="match_parent"
        android:background="#ffffff"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="绑定微信"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/tiaoguo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="跳过"
            android:layout_gravity="right"
            android:background="#ffffff"/>
    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/sell_button_activity_iv"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@mipmap/wx_bind_banner"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal"
        android:text="@string/sell_text1"
        android:textColor="#000000" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/sell_text2"
        android:textColor="#000000" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/sell_text3"
        android:textColor="#000000" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ff0000"
        android:gravity="center"
        android:text="绑定微信"
        android:layout_gravity="bottom"
        android:layout_margin="15dp"
        android:textColor="#ffffff" />
</LinearLayout>
